--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,3 +20,14 @@ services:
     volumes:
       - ../:/var/www
       - ./nginx:/etc/nginx/conf.d
+
+  db:
+    container_name: oop-db
+    image: mysql:8.0
+    volumes:
+      - ./storage/mysql:/var/lib/mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - 3306:3306
