--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "ext-pdo": "*",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "psr/container": "^2.0"
   },
   "autoload": {
     "psr-4": {
