--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
   "require": {
     "ext-pdo": "*",
-    "vlucas/phpdotenv": "^5.6",
-    "psr/container": "^2.0"
+    "vlucas/phpdotenv": "^5.3",
+    "psr/container": "^2.0",
+    "symfony/mailer": "^6.0"
   },
   "autoload": {
     "psr-4": {
