--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -31,3 +31,13 @@ services:
       MYSQL_ROOT_PASSWORD: root
     ports:
       - 3306:3306
+
+  mailhog:
+    container_name: oop-mailhog
+    image: mailhog/mailhog
+    restart: always
+    logging:
+      driver: "none"
+    ports:
+      - "8025:8025"
+      - "1025:1025"
