--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -41,3 +41,10 @@ services:
     ports:
       - "8025:8025"
       - "1025:1025"
+
+  cron:
+    container_name: oop-cron
+    build: ./cron
+    volumes:
+      - ../:/var/www
+      - ./log/cron:/var/log/cron
