--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "vlucas/phpdotenv": "^5.3",
     "psr/container": "^2.0",
     "symfony/mailer": "^6.0",
-    "doctrine/dbal": "^4.0"
+    "doctrine/dbal": "^4.0",
+    "doctrine/orm": "^3.1",
+    "symfony/cache": "^6.4"
   },
   "autoload": {
     "psr-4": {
